feat: adaptation for non-web version of bot; add some UI/UX
